--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
                         - clang-3.8
                         - libclang-common-3.8-dev
                         - llvm-3.8-runtime
+                        - llvm-3.8
 
 language: python
 python:
