--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ python:
         - 2.7
 
 install: ./install_deps.sh
-script: cd tests && python run.py; cat ./tmp_cmd.out
+script: cd tests && python run.py
